src/frontend/src/components/basic.less
* {
    margin: 0;
    padding: 0;
}

html {
    overflow-x: hidden;
    height: 100%;
}

body {
    background-color: @s2-white;
    position: relative; //is needed both in body and html to hide overflow in Safari
    overflow-x: hidden;
    min-height: 100vh;

    &.layer-open {
        overflow-y: hidden;
        max-height: 100vh;
    }
}

html, input, textarea, keygen, select, button, p , a  {
    font-family: @base-font;
    font-size: @base-font-size;
    line-height: 1;
    color: @base-font-color;
}

ul {
    list-style: none;
    padding-left: 0;
}

a {
    text-decoration: none;
    color: @s2-black;
}

&.hidden {
    display: none;
}

.container {
    margin: 0 @tower;

    @media (min-width: @tablet-portrait-up) {
        margin: 0 @tower-desktop;
    }
}

.title {
    font-size: @xl-title-font-size;
    line-height:  @xl-title-font-size;
    color: @s2-red;
    text-align: center;
    font-weight: 800;

    @media (min-width: @tablet-portrait-up) {
        font-size: @xl-title-font-size;
        line-height:  @xl-title-font-size;
    }
}

.subtitle {
    font-size: @m-title-font-size;
    line-height: @m-title-font-size;
    text-align: center;
    font-weight: 500;
}

.error {
    color: @s2-red;
}

